--- a/index.html
+++ b/index.html
@@ -38,10 +38,6 @@
       <section class="welcome-section">
         <div class="main-width welcome-content">
           <h1>Welcome to Mubadala Energy Global SCM Sharepoint</h1>
-          <p>
-            Your Digitally Integrated Portal Within the Global Supply Chain
-            Portal
-          </p>
         </div>
       </section>
       <section class="about-section">
@@ -461,29 +457,29 @@
                 <h4>Executive Committee</h4>
                 <div class="executive-row">
                   <div class="executive-member">
-                    <img src="images/placeholders/photo.png" alt="" />
-                    <span class="name">John Doe</span>
-                    <span class="role">Executive Committee</span>
+                    <img src="images/teams/ec-1.jpg" alt="" />
+                    <span class="name">Masroor Jilani</span>
+                    <span class="role">Chief Financial Officer</span>
                   </div>
                   <div class="executive-member">
-                    <img src="images/placeholders/photo.png" alt="" />
-                    <span class="name">John Doe</span>
-                    <span class="role">Executive Committee</span>
+                    <img src="images/teams/ec-2.jpg" alt="" />
+                    <span class="name">Stefano Raciti</span>
+                    <span class="role">Chief Operating Officer</span>
                   </div>
                   <div class="executive-member">
-                    <img src="images/placeholders/photo.png" alt="" />
-                    <span class="name">John Doe</span>
-                    <span class="role">Executive Committee</span>
+                    <img src="images/teams/placeholder.png" alt="" />
+                    <span class="name">Naser Al Hajri</span>
+                    <span class="role">SVP-Non-Operated</span>
                   </div>
                   <div class="executive-member">
-                    <img src="images/placeholders/photo.png" alt="" />
-                    <span class="name">John Doe</span>
-                    <span class="role">Executive Committee</span>
+                    <img src="images/teams/ec-4.png" alt="" />
+                    <span class="name">Rashed Al Blooshi</span>
+                    <span class="role">VP-Operated Assets</span>
                   </div>
                   <div class="executive-member">
-                    <img src="images/placeholders/photo.png" alt="" />
-                    <span class="name">John Doe</span>
-                    <span class="role">Executive Committee</span>
+                    <img src="images/teams/ec-5.png" alt="" />
+                    <span class="name">Adnan Bu Fateem</span>
+                    <span class="role">VP-Operations Technical</span>
                   </div>
                 </div>
                 <h5>Project Management Team</h5>
@@ -491,41 +487,41 @@
                   <div class="team-gray-bg">
                     <h6>Project Delivery Team</h6>
                     <div class="member-profile">
-                      <img src="images/placeholders/photo.png" alt="" />
+                      <img src="images/teams/dt-1.png" alt="" />
                       <div>
-                        <span>John Doe</span>
-                        <span>Manager, Supply Chain</span>
+                        <span>Butti Al Mazrouei</span>
+                        <span>Manager, Supply Chain Management</span>
                       </div>
                     </div>
                     <div class="member-profile">
-                      <img src="images/placeholders/photo.png" alt="" />
+                      <img src="images/teams/dt-2.png" alt="" />
                       <div>
-                        <span>John Doe</span>
-                        <span>Manager, Supply Chain</span>
+                        <span>Nik Nazrulhisham</span>
+                        <span>Manager, Supply Chain Management (MY)</span>
                       </div>
                     </div>
                     <div class="member-profile">
-                      <img src="images/placeholders/photo.png" alt="" />
+                      <img src="images/teams/dt-3.png" alt="" />
                       <div>
-                        <span>John Doe</span>
-                        <span>Manager, Supply Chain</span>
+                        <span>Andreas Kuswardono</span>
+                        <span>Manager, Supply Chain Management (ID)</span>
                       </div>
                     </div>
                   </div>
                   <div class="team-gray-bg">
                     <h6>Project Performance Leaders</h6>
                     <div class="member-profile">
-                      <img src="images/placeholders/photo.png" alt="" />
+                      <img src="images/teams/pl-1.png" alt="" />
                       <div>
-                        <span>John Doe</span>
-                        <span>Manager, Supply Chain</span>
+                        <span>Nur Habibah</span>
+                        <span>Sr. Officer, Contracts Management</span>
                       </div>
                     </div>
                     <div class="member-profile">
-                      <img src="images/placeholders/photo.png" alt="" />
+                      <img src="images/teams/pl-2.png" alt="" />
                       <div>
-                        <span>John Doe</span>
-                        <span>Manager, Supply Chain</span>
+                        <span>Samy Fahmy</span>
+                        <span>Sr. Engineer, Contracts</span>
                       </div>
                     </div>
                   </div>
@@ -533,15 +529,15 @@
                 <div class="members-row">
                   <div class="work">
                     <h6>Work Stream</h6>
-                    <span>“Policies, Procedures and Governance”</span>
+                    <span>"Policies, Procedures and Governance"</span>
                   </div>
                   <div class="work">
                     <h6>Work Stream</h6>
-                    <span>“Digital Landscape and Business Performance"</span>
+                    <span>"Digital Landscape & Business Performance"</span>
                   </div>
                   <div class="work">
                     <h6>Work Stream</h6>
-                    <span>“People Management and Business Alignment”</span>
+                    <span>"People Management and Business Alignment"</span>
                   </div>
                 </div>
               </div>
@@ -620,7 +616,14 @@
                       <td>Global Procurement & Supply Chain Policy</td>
                       <td>Approved Policy document</td>
                       <td>Ongoing</td>
-                      <td>80%</td>
+                      <td>
+                        <div class="progress-cell">
+                          <div class="progress-bar">
+                            <div class="gray-bar"></div>
+                          </div>
+                          80%
+                        </div>
+                      </td>
                     </tr>
                     <tr>
                       <td>2</td>
@@ -630,7 +633,14 @@
                         practices
                       </td>
                       <td>Ongoing</td>
-                      <td>70%</td>
+                      <td>
+                        <div class="progress-cell">
+                          <div class="progress-bar">
+                            <div class="gray-bar"></div>
+                          </div>
+                          70%
+                        </div>
+                      </td>
                     </tr>
                     <tr>
                       <td>3</td>
@@ -641,7 +651,59 @@
                         industry practices
                       </td>
                       <td>Ongoing</td>
-                      <td>50%</td>
+                      <td>
+                        <div class="progress-cell">
+                          <div class="progress-bar">
+                            <div class="gray-bar"></div>
+                          </div>
+                          50%
+                        </div>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>4</td>
+                      <td>Procurement Templates</td>
+                      <td>
+                        Standardize Procurement Templates (RFP For Goods &
+                        Services, RFQ, TBE, CBE, COC)
+                      </td>
+                      <td>Plannes</td>
+                      <td>
+                        <div class="progress-cell">
+                          <div class="progress-bar">
+                            <div class="gray-bar"></div>
+                          </div>
+                          30%
+                        </div>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>5</td>
+                      <td>Country Specific Procedures</td>
+                      <td>Review of Country Specific Procedure requirement</td>
+                      <td>Planned</td>
+                      <td>
+                        <div class="progress-cell">
+                          <div class="progress-bar">
+                            <div class="gray-bar"></div>
+                          </div>
+                          10%
+                        </div>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>6</td>
+                      <td>Supply Chain Management Business Process</td>
+                      <td>Develop Supply Chain Business Process</td>
+                      <td>Planned</td>
+                      <td>
+                        <div class="progress-cell">
+                          <div class="progress-bar">
+                            <div class="gray-bar"></div>
+                          </div>
+                          40%
+                        </div>
+                      </td>
                     </tr>
                   </table>
                 </div>
@@ -657,9 +719,18 @@
                     <tr>
                       <td>1</td>
                       <td>Global Procurement & Supply Chain Policy</td>
-                      <td>Approved Policy document</td>
+                      <td>
+                        Single point access for all Supply Chain Management team
+                      </td>
                       <td>Ongoing</td>
-                      <td>80%</td>
+                      <td>
+                        <div class="progress-cell">
+                          <div class="progress-bar">
+                            <div class="gray-bar"></div>
+                          </div>
+                          80%
+                        </div>
+                      </td>
                     </tr>
                     <tr>
                       <td>2</td>
@@ -669,7 +740,14 @@
                         portal on Mubadala Energy website
                       </td>
                       <td>Ongoing</td>
-                      <td>70%</td>
+                      <td>
+                        <div class="progress-cell">
+                          <div class="progress-bar">
+                            <div class="gray-bar"></div>
+                          </div>
+                          70%
+                        </div>
+                      </td>
                     </tr>
                     <tr>
                       <td>3</td>
@@ -679,7 +757,14 @@
                         SCM related activities
                       </td>
                       <td>Ongoing</td>
-                      <td>50%</td>
+                      <td>
+                        <div class="progress-cell">
+                          <div class="progress-bar">
+                            <div class="gray-bar"></div>
+                          </div>
+                          50%
+                        </div>
+                      </td>
                     </tr>
                     <tr>
                       <td>4</td>
@@ -689,7 +774,14 @@
                         Cloud Solution (e.g. Remote Approvals of Submission)
                       </td>
                       <td>Ongoing</td>
-                      <td>30%</td>
+                      <td>
+                        <div class="progress-cell">
+                          <div class="progress-bar">
+                            <div class="gray-bar"></div>
+                          </div>
+                          30%
+                        </div>
+                      </td>
                     </tr>
                     <tr>
                       <td>5</td>
@@ -705,8 +797,29 @@
                           <li>Introduce OKR Dashboard for SCM</li>
                         </ul>
                       </td>
-                      <td>Ongoing</td>
-                      <td>50%</td>
+                      <td>Planned</td>
+                      <td>
+                        <div class="progress-cell">
+                          <div class="progress-bar">
+                            <div class="gray-bar"></div>
+                          </div>
+                          10%
+                        </div>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>6</td>
+                      <td>Reporting Tools</td>
+                      <td>Identify list of reports for SCM</td>
+                      <td>Planned</td>
+                      <td>
+                        <div class="progress-cell">
+                          <div class="progress-bar">
+                            <div class="gray-bar"></div>
+                          </div>
+                          40%
+                        </div>
+                      </td>
                     </tr>
                   </table>
                 </div>
@@ -721,20 +834,91 @@
                     </tr>
                     <tr>
                       <td>1</td>
-                      <td>Global Procurement & Supply Chain Policy</td>
-                      <td>Approved Policy document</td>
+                      <td>Supply Chain Competency Framework</td>
+                      <td>
+                        To deliver Level 1 SCM Competency Framework Requirement
+                        for Contracts Management and Material Management
+                      </td>
                       <td>Ongoing</td>
-                      <td>80%</td>
+                      <td>
+                        <div class="progress-cell">
+                          <div class="progress-bar">
+                            <div class="gray-bar"></div>
+                          </div>
+                          80%
+                        </div>
+                      </td>
                     </tr>
                     <tr>
                       <td>2</td>
-                      <td>Global Procurement Procedures</td>
+                      <td>Workshop and Inhouse Training Programs</td>
                       <td>
-                        Review current Procedures to reflect current business
-                        practices
+                        To deliver annual session for procurement and supply
+                        chain individuals
                       </td>
                       <td>Ongoing</td>
-                      <td>70%</td>
+                      <td>
+                        <div class="progress-cell">
+                          <div class="progress-bar">
+                            <div class="gray-bar"></div>
+                          </div>
+                          70%
+                        </div>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>3</td>
+                      <td>External Training - Strategic Vendors</td>
+                      <td>
+                        Prepare materials for annual session with strategic
+                        vendors
+                      </td>
+                      <td>Ongoing</td>
+                      <td>
+                        <div class="progress-cell">
+                          <div class="progress-bar">
+                            <div class="gray-bar"></div>
+                          </div>
+                          50%
+                        </div>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>4</td>
+                      <td>
+                        Training Requirement for Contracts Management Officers
+                      </td>
+                      <td>
+                        Prepare materials for a refresher program for all
+                        Mubadala Energy contract managements officers
+                      </td>
+                      <td>Planned</td>
+                      <td>
+                        <div class="progress-cell">
+                          <div class="progress-bar">
+                            <div class="gray-bar"></div>
+                          </div>
+                          30%
+                        </div>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>5</td>
+                      <td>New Joiner Induction Program</td>
+                      <td>
+                        Template for induction program used for all Mubadala
+                        Energy new joiners (Supply Chain or other business
+                        functions)
+                      </td>
+                      <td>Planned</td>
+                      <td>
+                        <div class="progress-cell">
+                          <div class="progress-bar">
+                            <div class="gray-bar"></div>
+                          </div>
+                          10%
+                        </div>
+                      </td>
                     </tr>
                   </table>
                 </div>
